# termtypr

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests-and-coverage.yml
src/: __init__.py  cli.py  config.py
src/application/router/: application_router.py
src/application/services/: __init__.py  stats_service.py
src/core/: phrase_generator.py
src/data/: history.py  history_adapter.py  word_storage.py
src/domain/config/: settings.py
src/domain/models/: __init__.py
src/domain/repositories/: history_repository.py
src/games/: base_game.py
src/infrastructure/persistence/: json_history_repository.py  memory_history_repository.py
src/menu/: menu_system.py
src/ui/: main_app.py
termtypr/: __init__.py  cli.py  config.py  main.py
termtypr/application/: __init__.py  application_router.py
termtypr/application/controllers/: game_controller.py
termtypr/application/router/: __init__.py  application_router.py
termtypr/application/services/: __init__.py  stats_service.py
termtypr/core/: phrase_generator.py  stats_calculator.py  word_generator.py
termtypr/data/: word_storage.py
termtypr/data/resources/: phrases.json
termtypr/domain/: history_repository.py
termtypr/domain/models/: __init__.py  game_result.py  user_preferences.py
termtypr/games/: __init__.py  base_game.py  phrase_typing_game.py  random_words_game.py
termtypr/infrastructure/persistence/: json_history_repository.py  json_preferences_repository.py  memory_history_repository.py
termtypr/ui/: __init__.py  game_view.py  main_app.py  main_menu_view.py  results_view.py  stats_view.py
tests/unit/application/: test_application_router.py  test_game_controller.py  test_stats_service.py
tests/unit/domain/: test_game_result.py  test_game_state.py  test_settings.py  test_typing_stats.py  test_user_preferences.py
tests/unit/infrastructure/: test_json_history_repository.py  test_json_preferences_repository.py  test_memory_history_repository.py
