[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "termtypr"
dynamic = ["version"]
description = "A Python CLI application for practicing and improving typing speed"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Stefano Mazzoleni" }]
keywords = ["typing", "cli", "practice", "speed", "terminal"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
dependencies = [
    "rich~=14.3",
    "textual~=8.0",
    "plotext~=5.3",
    "typer~=0.24",
    "platformdirs~=4.9",
    "pydantic~=2.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "pre-commit>=4.5",
    "ruff>=0.15",
]

[project.urls]
"Repository" = "https://github.com/SteMazzO/TermTypr"
"Changelog" = "https://github.com/SteMazzO/TermTypr/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/SteMazzO/TermTypr/issues"

[project.scripts]
termtypr = "termtypr.cli:app"

[tool.hatch.version]
path = "termtypr/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["termtypr"]

[tool.hatch.envs.default]
features = ["dev"]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "F",      # Pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "D",      # pydocstyle
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "PL",     # pylint
    "RUF",    # ruff-specific rules
    "ERA",    # eradicate
    "PERF",   # perflint
    "B",      # flake8-bugbear
    "G",      # flake8-logging-format
    "Q",      # flake8-quotes
    "C4",     # flake8-comprehensions
    "YTT",    # flake8-2020
    "T20",    # flake8-print
    "SIM",    # flake8-simplify
    "PIE",    # flake8-pie
    "FIX",    # flake8-fixme
    "ICN",    # flake8-import-conventions
    "LOG",    # flake8-logging
    "PYI",    # flake8-pyi
    "RET",    # flake8-return
]

ignore = [
    "D107",     # Missing docstring in __init__
    "PLR2004",  # Magic value comparison
    "D104",     # Missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
